# open_storage

./: main.py  pyproject.toml  план_реализации.md
docs/: ARCHITECTURE.md
src/core/: __init__.py  hashing.py
tests/unit/: test_hashing.py
