[project]
name = "open-storage"
version = "0.1.0"
description = "Система хранения файлов с идентификацией по хэшу"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Асинхронная работа с SQLite
    "aiosqlite==0.22.1",
    # Асинхронное чтение файлов
    "aiofiles==25.1.0",
    # Валидация данных
    "pydantic==2.12.5",
]

[project.optional-dependencies]
# 📦 Серверные зависимости
server = [
    "fastapi==0.135.2",
    # Клиент сервера
    "uvicorn==0.42.0",
]

# 🌐 Сетевые зависимости
remote = [
    # Асинхронный HTTP-клиент для подключения к серверу
    "httpx==0.28.1",
]

# 🖥️ Клиентские зависимости
client = [
    # Превью изображений
    "pillow==12.1.1",
]

# 🧪 Разработка
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.8",
    "mypy==1.19.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
